--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p class="lead my-4">Our team is looking for talented people who wants to show case their work. We provide support and equal oppurtunity for everyone of you. What are you waiting for? Become part of our team!</p>
                     <button class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="img/programmer.svg" alt="">
+                <img class="img-fluid w-50 d-none d-sm-block" src="programmer.svg" alt="">
              </div>
         </div>
     </section>
