--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand">Teaching Blog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu"><span class="navbar-toggler-icon"></span></button>
@@ -24,7 +24,7 @@
                         <a href="#question" class="nav-link">Question</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#feedback" class="nav-link">Feedback</a>
+                        <a href="#instructors" class="nav-link">Instructors</a>
                     </li>
                 </ul>
             </div>
@@ -63,7 +63,7 @@
     <!--Boxes-->
     <section class="p-5">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center g-3"> <!--g means a gap, it can be in a x or y axis-->
             <div class="col-md">
                 <div class="card bg-dark text-light">
                 <div class="card-body text-center">
@@ -109,6 +109,226 @@
         </div>
         </div>
     </section>
+
+
+    <!--Learning Section-->
+    <section id="learn" class="p-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img class="img-fluid" src="fundamentals.svg"alt="">
+                </div>
+                <div class="col-md">
+                    <h2>Learn the Fundamentals</h2>
+                    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod ullam omnis amet illo reprehenderit?</p>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas reiciendis est quas praesentium provident fugit officiis, doloribus earum! Sint inventore quidem quia facere. Quidem tempore pariatur accusamus consequuntur autem.</p>
+                    <a href="#" class="btn btn-light mt-5"><i class="bi bi-chevron-right"></i>Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="learn" class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-around">
+                <div class="col-md">
+                    <h2>Learn the Fundamentals</h2>
+                    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod ullam omnis amet illo reprehenderit?</p>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas reiciendis est quas praesentium provident fugit officiis, doloribus earum! Sint inventore quidem quia facere. Quidem tempore pariatur accusamus consequuntur autem.</p>
+                    <a href="#" class="btn btn-light mt-5"><i class="bi bi-chevron-right"></i>Read More</a>
+                </div>
+                <div class="col-md">
+                    <img class="img-fluid" src="last.svg"alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Accordion-->
+    <section class="p-5" id="question">
+        <div class="container">
+            <h2 class="text-center mb-4">Frequently Asked Question</h2>
+            <div class="accordion accordion-flush" id="questions">
+                <!--item one-->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+                      Where exactly are you located?
+                    </button>
+                  </h2>
+                  <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
+                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, similique voluptas qui, impedit porro iusto labore cumque ullam, ut dolorum tempora. Asperiores, ab enim ad consectetur aperiam distinctio labore eveniet eos vitae animi molestiae. Temporibus animi, accusantium ut id unde ducimus voluptate obcaecati placeat earum debitis aliquam quas tempore vero.</div>
+                  </div>
+                </div>
+                <!--Item Two-->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+                        What are your services?
+                      </button>
+                    </h2>
+                    <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, similique voluptas qui, impedit porro iusto labore cumque ullam, ut dolorum tempora. Asperiores, ab enim ad consectetur aperiam distinctio labore eveniet eos vitae animi molestiae. Temporibus animi, accusantium ut id unde ducimus voluptate obcaecati placeat earum debitis aliquam quas tempore vero.</div>
+                    </div>
+                  </div>
+                <!--Item three-->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+                        What do i need to know?
+                      </button>
+                    </h2>
+                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, similique voluptas qui, impedit porro iusto labore cumque ullam, ut dolorum tempora. Asperiores, ab enim ad consectetur aperiam distinctio labore eveniet eos vitae animi molestiae. Temporibus animi, accusantium ut id unde ducimus voluptate obcaecati placeat earum debitis aliquam quas tempore vero.</div>
+                    </div>
+                  </div>
+                  <!--Item Four-->
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">
+                        How do i sign up?
+                      </button>
+                    </h2>
+                    <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, similique voluptas qui, impedit porro iusto labore cumque ullam, ut dolorum tempora. Asperiores, ab enim ad consectetur aperiam distinctio labore eveniet eos vitae animi molestiae. Temporibus animi, accusantium ut id unde ducimus voluptate obcaecati placeat earum debitis aliquam quas tempore vero.</div>
+                    </div>
+                  </div>
+                  <!--Item five-->
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">
+                        Would you help me to find a job
+                      </button>
+                    </h2>
+                    <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, similique voluptas qui, impedit porro iusto labore cumque ullam, ut dolorum tempora. Asperiores, ab enim ad consectetur aperiam distinctio labore eveniet eos vitae animi molestiae. Temporibus animi, accusantium ut id unde ducimus voluptate obcaecati placeat earum debitis aliquam quas tempore vero.</div>
+                    </div>
+                  </div>
+              </div>
+        </div>
+    </section>
+
+    <!--OUR INSTRUCTOR-->  
+    <section class="bg-primary p-5" id="instructors">
+        <div class="container">
+            <h2 class="text-center text-white">Our Instructors</h2>
+            <p class="lead text-white text-center mb-5">
+                Our instructors are all having 5+ years of experienced in the industry
+            </p>
+            <div class="row g-4">
+                <!--First Instructor-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/13.jpg" class="rounded-circle mb-3">
+                            <h3 class="card-title mb-3">John Doe</h3>
+                            <p class="card-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, nostrum blanditiis numquam a porro totam.   
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx1"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Second Instructor-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/16.jpg" class="rounded-circle mb-3">
+                            <h3 class="card-title mb-3">Princess</h3>
+                            <p class="card-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, nostrum blanditiis numquam a porro totam.   
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx1"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Third Instructor-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/15.jpg" class="rounded-circle mb-3">
+                            <h3 class="card-title mb-3">Mami Grey</h3>
+                            <p class="card-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, nostrum blanditiis numquam a porro totam.   
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx1"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Fourth Instructor-->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/14.jpg" class="rounded-circle mb-3">
+                            <h3 class="card-title mb-3">John Doe</h3>
+                            <p class="card-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, nostrum blanditiis numquam a porro totam.   
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx1"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Map and location-->
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">
+                        Contact Info
+                    </h2>
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location</span> Parang Marikina City
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location</span> Parang Marikina City
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location</span> Parang Marikina City
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location</span> Parang Marikina City
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location</span> Parang Marikina City
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Footer-->
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+            <p class="lead">Copyright &copy; 2022 Bootstrap Practice Travery Media </p>
+            <a href="#" class="position-absolute bottom-0 end-0 p-5"><i class="bi bi-arrow-up-circle h1"></i></a>
+        </div>
+    </footer>
+
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
